--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@types/lodash": "^4.14.149",
+    "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "firebase": "^7.5.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.4.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
