--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.803.19",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "@types/lodash": "^4.14.149",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.3.1",
